--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,37 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  /* answer */
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  /* answer */
+  padding: 8px;  
+  margin-bottom: 8px;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  /* answer */
+  margin-bottom: 8px;
+  padding: 16px 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  /* answer */
+  padding: 8px; 
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  /* answer */
+  padding: 8px 24px;
+  margin: 0 auto;
+  display: block;
 }
