--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -1,8 +1,15 @@
+* {
+  border-color: 2px solid red;
+}
+
 .container {
   background: dodgerblue;
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  display: flex;
+  /* answer */
+  justify-content: center;
 }
 
 .box {
@@ -12,4 +19,6 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+  /* answer */
+  align-self: center;
 }
