--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,16 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  /* answer */
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.left-header, .right-header {
+  display: flex;
+  justify-content: space-around;
+  gap: 16px;
 }
 
 .profile-image {
@@ -20,6 +30,10 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  /* answer */
+  display: flex;
+  align-self: center;
+  flex-shrink: 0;
 }
 
 .logo {
@@ -27,6 +41,9 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  /* answer */
+  display: flex;
+  align-self: center;
 }
 
 button {
@@ -45,4 +62,9 @@ a {
 
 ul {
   list-style-type: none;
+  /* answer */
+  display: flex;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
 }
